# zaheer

./: .clang-format  .editorconfig  .gitignore  LICENSE  README.md  design.circ  index.html  script.js  style.css
arduino/: platformio.ini
arduino/include/: kora.hpp  memory.hpp  utils.hpp
arduino/src/: kora.cpp  main.cpp
docs/: kora-processor.md  lola-io-chip.md  mako-computer-system.md  taro-video-chip.md  taro.md  zuko-operating-system.md
emulator/: bob.toml
emulator/src/: bus.c  bus.h  main.c
emulator/src/devices/: cpu.c  cpu.h  ps2.c  ps2.h  ram.c  ram.h  taro.c  taro.h  uart.c  uart.h
fpga/: Makefile  cpu.v  hdmi.v  memory.v  tangnano9k.cst  taro.v  top.v  uart_rx.v  uart_tx.v
fpga/boot/: boot.s  link.ld  main.c  start.s
kora-asm/: .gitignore  kasm.c  lexer.c  lexer.h  main.c  parser.h  utils.c  utils.h
kora-sim/: .gitignore  kora.c
microcontroller-simulator/include/: kora.hpp
microcontroller-simulator/src/: main.cpp  memory.cpp
modern-assembler/: build.sh
modern-assembler/examples/: hello.asm
modern-assembler/include/: list.h  token.h
modern-assembler/src/: lexer.c  list.c  main.c  token.c  utils.c
system/: Makefile  link.ld  main.c  start.s
taro/: .gitignore  README.md  taro.c  taro.html
tools/: asm.c
vga/: CMakeLists.txt  font.h  rgb.pio  vga.c  vsync.pio
web-simulator/: index.html  simulator.css  simulator.js
